# pim

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cicd.yml
src/app/: mod.rs  source.rs  target.rs
src/core/: error.rs  input.rs  io.rs  mod.rs  output.rs  shell.rs
testdata/: test.yml
